# flashcard

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yaml  docker-compose.yml  err.txt  pyproject.toml  requirements.txt
.github/workflows/: mobile-ci.yml
app/: .env  .env.example  crud.py  database.py  exceptions.py  main.py  models.py  schemas.py
app/routers/: auth.py  books.py  cards.py  decks.py  generation.py  search.py  storage.py  templates.py
app/utils/: gemini.py  llama.py  logger.py  storage_adapter.py  token.py
back/app/: main.py
back/tests/: conftest.py
backend/: .template.env  Dockerfile  __init__.py  database.py  datamodel.py  main.py  pyproject.toml  requirements.txt
backend/app/: cli.py  database.py  database2.py  elastic.py  exceptions.py  main.py  models.py  schemas.py  utils.py
backend/app/routers/: flashcards.py
backend/app/routers/v1/: decks.py  flashcards.py
backend/tests/: test_flashcards.py
front/: .prettierignore  .prettierrc  index.html  package-lock.json  package.json
front/src/: App.tsx  FinalApp.tsx  main.tsx  types.ts
frontend/: .eslintrc.json  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  theme.ts
gui/: index.html  lint.json  lint_output.txt  lint_summary.txt  package-lock.json  package.json  tsc_output.txt  vite.config.ts
gui/src/: App.tsx
mobile/: .env.example  .gitignore  README.md  analysis_options.yaml  pubspec.yaml
mobile/lib/: main.dart
myenv/: pyvenv.cfg
(+219 files in other folders)
