[project]
name = "flashcard_api"
version = "0.1.0"
description = "API for flashcard application using FastAPI and MongoDB"
authors = [{ name = "Amir Golparvar", email = "golparvar.amir@gmail.com" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "mongoengine",
    "pydantic",
    "python-dotenv",
    "ruff>=0.8.2",
    "blinker>=1.9.0",
    "bcrypt>=4.2.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.19",
    "email-validator>=2.2.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poe]
executor = { type = "simple" }

[tool.poe.tasks]
api = "uvicorn app.main:app --reload"
gui = { shell = "cd gui && npm run dev" }
