[tool.ruff]
line-length = 88

select = ["E", "F", "W", "C", "N"]  # E: Errors, F: PyFlakes, W: Warnings, C: Complexity, N: Naming

extend-select = ["E302", "E303"]

ignore = [
    "E203",  # Whitespace before ':'
    "E266",  # Too many leading '#' for block comment
    "E501",  # Line too long (handled by line-length)
    "F403",  # 'from module import *' used; unable to detect undefined names
    "F401"   # Imported but unused
]

fix = true

[build-system]
requires = ["setuptools>=42", "wheel", "ruff"]
build-backend = "setuptools.build_meta"